# not-vim

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  \  a.out  arena.c  assert.h  buffer.c  buffer.h  bufferhelp.h  cmake_install.cmake  color.h  cursor.c  cursor.h  cursorhelp.h  cvector.h  draw.c  editor.c  editor.h  empty  error.c  error.h  events.c  events.h  gap.h  general.c  general.h  input.c  install_deps.sh  keyboard.h  main.c  not-vim.h  nv  nv.h  nvapi.h  nvlua.c  (+16 more)
include/: arena.h  buffer.h  color.h  context.h  cursor.h  draw.h  editor.h  error.h  events.h  input.h  nvapi.h  nvlua.h  nvrpc.h  nvtree_conf.h  plugin.h  status.h  termbox2.h  tui.h  view.h  window.h
lua/: events.c  events.h  notvim.lua  nvlua.c  nvlua_int.h
lua/binder/: notvim.lua
plugload/: main.lua
plugload/plugload/: README  plugload.c  plugload.sh
test/: editing  rows  wrap
